fix: fix date time format with swagger
